camo-derive/tests/fail/serde_error.rs
use camo_derive::Camo;

#[derive(Camo)]
#[serde(rename_all = "oops")]
struct Foo {
    foo: u32,
    bar: bool,
    baz: char,
}

fn main() {}
