camo-derive/tests/fail/serde_error.stderr
error: `camo`: invalid rename rule
 --> tests/fail/serde_error.rs:4:22
  |
4 | #[serde(rename_all = "oops")]
  |                      ^^^^^^
